Fixed z-index for time-column to be in front of meetings

--- a/frontend/styles/organisms/WeeklyView.module.scss
+++ b/frontend/styles/organisms/WeeklyView.module.scss
@@ -61,8 +61,10 @@
   border-right: 1px solid #ddd;
   position: sticky;
   left: 0;
-  z-index: 1;
+  z-index: 20;
   height: 2400px;
+  background-color: #fff;
+
 }
 
 .timeHeader {
